# simul

./: CHANGELOG.org  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  README.org  TODO.md  TODO.org  check.sh  fix.sh  flake.nix  rust-toolchain.toml
benches/: benchmarks.rs  simulated_annealing_benchmark.rs
diagrams/: control_flow.d2  simulation_agents.d2
examples/: nine_ball_simulation.rs  readme.rs  simple_experiment.rs
simul-macro/: Cargo.toml  README.md
simul-macro/src/: lib.rs
src/: agent.rs  experiment.rs  lib.rs  main.rs  message.rs  ticket.rs
src/prototyping-binary/: main.rs
tools/: pgo_optimized_build.sh
