[package]
name = "simul"
version = "0.2.3"
rust-version = "1.77"
edition = "2021"
authors = ["Jordan McQueen <j@jm.dev>"]
license = "MIT"
license-file = "LICENSE"

keywords = ["sim", "simulation", "annealing", "experiment"]
categories = ["mathematics", "science", "development-tools"]
description = """
A discrete-event simulation library aimed at high-level use-cases to
quickly simulate real-world problems and run simulated experiments.

Some example use cases might include simulating logistics or operations research
problems, running experiments to determine optimal parameters, simulating
queueing systems, distributed systems, performance engineering, and so on.
"""

# homepage, documentation, repository currently all point to the GitHub repo.
homepage = "https://github.com/jmqd/simul"
repository = "https://github.com/jmqd/simul"
readme = "README.md"

[features]
default = []
plotters = ["dep:plotters"]
build-binary = ["plotters"]

[lib]
name = "simul"
path = "src/lib.rs"

[[bin]]
name = "simul-bin"
path = "src/prototyping-binary/main.rs"
required-features = ["build-binary"]

[dev-dependencies]
env_logger = "0.10"
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
rand = {version = "0", features = ["alloc"]}
rand_distr = "0.4"
ringbuffer = "0.14"
log = "0.4"
plotters = {version = "0.3.3", optional = true}
