[package]
name = "simul"
version = "0.4.1"
rust-version = "1.71"
edition = "2021"
authors = ["Jordan McQueen <j@jm.dev>"]
license = "MIT"

keywords = ["sim", "simulation", "annealing", "experiment"]
categories = ["mathematics", "science", "development-tools"]
description = """
A discrete-event simulation library aimed at high-level use-cases to
quickly simulate real-world problems and run simulated experiments.

Some example use cases might include simulating logistics or operations research
problems, running experiments to determine optimal parameters, simulating
queueing systems, distributed systems, performance engineering, and so on.
"""

# homepage, documentation, repository currently all point to the GitHub repo.
homepage = "https://github.com/jmqd/simul"
repository = "https://github.com/jmqd/simul"
readme = "README.md"

[lib]
name = "simul"
path = "src/lib.rs"

[dev-dependencies]
env_logger = "0.11.8"
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "simulated_annealing_benchmark"
harness = false

[dependencies]
rand = {version = "0.9.2", features = ["alloc"]}
rand_distr = "0.5.1"
log = "0.4.28"
dyn-clone = "1.0.20"

[lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"

module_name_repetitions = "allow"
cast_precision_loss = "allow"
unwrap_used = "deny"
expect_used = "deny"
clone_on_copy = "deny"
redundant_closure_for_method_calls = "deny"
missing_docs_in_private_items = "warn"
too_many_lines = "warn"
